# Rust-API-Demo

./: Cargo.toml  README.md
src/: main.rs
src/api/: holder_service.rs  mod.rs
src/models/: holder_model.rs  mod.rs
src/repo/: db.rs  mod.rs
