[package]
name = "rocket-mongo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.149"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.mongodb]
version = "2.3.1"
default-features = false
features = ["sync"]
